...
    <string name="tv_shows">TV SHOWS</string>
    <string name="ratingLabel">Rating</string>
    <string name="durationLabel">Duration</string>
    <string name="overviewLabel">Overview</string>
    <string name="streamlabel">Stream on</string>
    <string-array name="tvshowtitle">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>FairyTail</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>Game of Thrones</item>
...
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_riverdale</item>
        <item>@drawable/poster_shameless</item>
    </string-array>

    <string-array name="tvshowrating">
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-PG</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-MA</item>
...
        <item>TV-14</item>
        <item>TV-MA</item>

    </string-array>

    <string-array name="tvshowduration">
        <item>42m</item>
        <item>49m</item>
        <item>25m</item>
        <item>25m</item>
        <item>22m</item>
        <item>44m</item>
        <item>1h</item>
...
        <item>R</item>
        <item>PG</item>
        <item>12+</item>
    </string-array>

    <string-array name="movieduration">
        <item>2h 16m</item>
        <item>2h 2m</item>
        <item>2h 23m</item>
        <item>2h 15m</item>
        <item>1h 59m</item>
        <item>2h 10m</item>
        <item>2h 14m</item>
...
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In 1944, a courageous group of Russian soldiers managed to escape from German captivity in a half-destroyed legendary T-34 tank. Those were the times of unforgettable bravery, fierce fighting, unbreakable love, and legendary miracles.</item>

    </string-array>

    <string-array name="movietitles">
        <item>A Star is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: Crimes of Grindelwald</item>
...
