...
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingWithSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center"
                android:fitsSystemWindows="true"
                android:textAlignment="center"
                app:contentScrim="?colorPrimary"
...
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="@{viewmodel.movies != null ? viewmodel.movies.title : viewmodel.tvshows.name}"
                    app:titleTextColor="@color/cardview_shadow_start_color" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
...
