...
                android:text="@string/overviewLabel"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationLabel" />

            <TextView
                android:id="@+id/detailRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#9C27B0"
                android:text="@{viewmodel.movies != null ? Double.toString(viewmodel.movies.vote_average) : Double.toString(viewmodel.tvshows.vote_average)}"
...
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/ratingLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:text="PG-13" />

            <TextView
                android:id="@+id/detailDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold"
...
